# open-pincery

./: .env.example  .gitignore  CHANGELOG.md  Caddyfile.example  Cargo.toml  DELIVERY.md  Dockerfile  Dockerfile.devshell  LICENSE  LICENSE-APACHE  README.md  deny.toml  docker-compose.caddy.yml  docker-compose.yml  install.sh  pcy  pcy.ps1  preferences.md  release-plz.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: analyze.agent.md  explore.agent.md  reconcile.agent.md  review.agent.md  verify.agent.md
.github/hooks/: block_destructive.py  commit-msg-spec-ref  format.json  format_rust.py  formatting.json  precommit.json  precommit_fmt_check.py  safety.json
.github/prompts/: analyze.prompt.md  audit-stack.prompt.md  build.prompt.md  deploy.prompt.md  design.prompt.md  distill.prompt.md  expand.prompt.md  iterate.prompt.md  reconcile.prompt.md  review.prompt.md  verify.prompt.md
.github/skills/build-discipline/: SKILL.md
.github/workflows/: ci.yml  release-plz.yml  release.yml  tla.yml
docs/: SECURITY.md  api.md  onboarding.md
docs/input/: OpenPinceryAgent.tla  OpenPinceryCanonical.cfg  OpenPinceryCanonical.small.cfg  OpenPinceryCanonical.tla  README.md  agent-harness-landscape-2026-04.md  best-practices.md  cloudflare-agents-sdk-notes-2026-04.md  cloudflare-ai-infra-notes-2026-04.md  competitive-landscape.md  enterprise_readiness.md  extract_pdf.py  genericagent-notes-2026-04.md  improvement-ideas.md  north-star-2026-04.md  saas-readiness.md  security-architecture.md  self_host_readiness.md  stonebraker-dbos-notes-2026-04.md  technical-stack.md  tool-landscape-audit-2026-05.md
docs/input/post_v9_ideation/: north-star-adjacent-ideation.md  open-pincery-source-audit.md  post-v9-audit-2026-05-08.md
docs/input/post_v9_ideation/feature/v1-runtime/discover/: interview-log.md  lean-canvas.md  opportunity-tree.md  problem-validation.md  solution-testing.md  wave-decisions.md
docs/input/security_append/: AgenticOsSecureBehaviorV2.tla  securitymodel.tla
docs/input/v6_pre_iterate/: agent-taxonomy-2026-04.md  first-principles-assessment.md  research-synthesis-2026-04.md  strategic-answers-2026-04.md  tripwires-2026-04.md
docs/reference/: adoption-plan-2026-04.md  external-process-audit-2026-04.md  system_state_machine.tla
docs/runbooks/: audit_chain_recovery.md  db-restore.md  dev_setup_macos.md  dev_setup_windows.md  migration-rollback.md  rate-limit-tuning.md  stale-wake-triage.md  webhook-debugging.md
docs/security/: sandbox-architecture-audit.md
migrations/: 20260418000001_create_users.sql  20260418000002_create_organizations.sql  20260418000003_create_workspaces.sql  20260418000004_create_memberships.sql  20260418000005_create_agents.sql  20260418000006_create_events.sql  20260418000007_create_projections.sql  20260418000008_create_wake_summaries.sql  20260418000009_create_prompt_templates.sql  20260418000010_create_llm_calls.sql  20260418000011_create_tool_audit.sql  20260418000012_create_sessions.sql  20260418000013_create_auth_audit.sql  20260418000014_event_source_not_null.sql  20260418000015_add_webhook_secrets.sql  20260418000016_create_webhook_dedup.sql  20260420000001_agent_status_states.sql  20260420000002_create_credentials.sql  20260420000003_prompt_template_credentials.sql  20260501000001_add_event_hash_chain.sql  20260501000002_add_prompt_injection_floor.sql  20260501000003_create_capability_nonces.sql  20260507000001_agent_status_fine_grained.sql  20260510000001_create_llm_providers.sql
scaffolding/: design.md  log.md  readiness.md  scope.md  spec_coverage.md
scripts/: capture_seccomp_corpus.sh  devshell.ps1  devshell.sh  probe_landlock.sh  smoke.ps1  smoke.sh  tlc_check.sh
src/: api_client.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/api/: agents.rs  audit.rs  bootstrap.rs  credentials.rs  events.rs  health.rs  me.rs  messages.rs  mod.rs  openapi.rs  providers.rs  webhooks.rs
src/background/: audit_chain.rs  listener.rs  mod.rs  stale.rs
src/cli/: config.rs  migrate.rs  mod.rs  output.rs  resolve.rs
src/cli/commands/: agent.rs  audit.rs  backup.rs  bootstrap.rs  budget.rs  completion.rs  credential.rs  demo.rs  doctor.rs  events.rs  init.rs  login.rs  message.rs  mod.rs  provider.rs  status.rs  whoami.rs
src/cli/nouns/: context.rs  mod.rs
src/models/: agent.rs  credential.rs  event.rs  llm_call.rs  llm_provider.rs  mod.rs  projection.rs  prompt_template.rs  user.rs  workspace.rs
src/observability/: landlock_audit.rs  landlock_audit_netlink.rs  logging.rs  metrics.rs  mod.rs  seccomp_audit.rs  server.rs
src/runtime/: capability.rs  capability_nonce.rs  drain.rs  lifecycle.rs  llm.rs  maintenance.rs  mod.rs  prompt.rs  sandbox.rs  tools.rs  vault.rs  wake_loop.rs
src/runtime/sandbox/: bwrap.rs  cgroup.rs  init_policy.rs  landlock.rs  mod.rs  netns.rs  preflight.rs  seccomp.rs
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  state.js  ui.js
static/js/views/: agents.js  detail.js  login.js  settings.js
tests/: agent_mgmt_test.rs  agent_status_test.rs  api_test.rs  audit_api_test.rs  audit_chain_test.rs  bootstrap_test.rs  budget_test.rs  caddy_overlay_test.rs  capability_gate_test.rs  capability_nonce_test.rs  cli_audit_verify_test.rs  cli_backup_restore_test.rs  cli_completion_test.rs  cli_context_test.rs  cli_credential_test.rs  cli_doctor_test.rs  cli_e2e_test.rs  cli_init_test.rs  cli_naming_test.rs  cli_noun_verb_test.rs  cli_output_flag_test.rs  cli_provider_test.rs  compose_env_test.rs  deny_config_test.rs  devshell_parity_test.rs  docker_nonroot.sh  dockerfile_nonroot_test.rs  drain_test.rs  env_example_test.rs  event_log_test.rs  health_test.rs  honesty_pass_test.rs  landlock_audit_test.rs  landlock_scope_test.rs  lifecycle_test.rs  lifecycle_transition_test.rs  list_credentials_tool_test.rs  maintenance_test.rs  no_raw_command_new.rs  no_raw_status_literals.rs  (+38 more)
tests/common/: mod.rs
tests/fixtures/seccomp/: README.md  additions.txt  observed_syscalls.txt
