[package]
name = "open-pincery"
version = "1.0.0"
edition = "2021"
description = "Multi-agent platform for durable, event-driven AI agents"
license = "MIT"
repository = "https://github.com/RCSnyder/open-pincery"
homepage = "https://github.com/RCSnyder/open-pincery"
readme = "README.md"
keywords = ["agents", "ai", "llm", "event-sourcing", "axum"]
categories = ["command-line-utilities", "web-programming::http-server"]
rust-version = "1.88"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.9"
base64 = "0.22"
dotenvy = "0.15"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
governor = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[[bin]]
name = "pcy"
path = "src/bin/pcy.rs"

# AC-20: Release profile — small, stripped, single codegen unit for reproducibility.
# Leaves panic = "unwind" (default) so a panic in one background task does not
# terminate the whole multi-agent service.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
