[package]
name = "open-pincery"
version = "1.0.1"
edition = "2021"
description = "Multi-agent platform for durable, event-driven AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RCSnyder/open-pincery"
homepage = "https://github.com/RCSnyder/open-pincery"
readme = "README.md"
keywords = ["agents", "ai", "llm", "event-sourcing", "axum"]
categories = ["command-line-utilities", "web-programming::http-server"]
rust-version = "1.88"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.9"
base64 = "0.22"
dotenvy = "0.15"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
governor = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
toml = "0.8"
async-trait = "0.1"
tempfile = "3"
aes-gcm = "0.10"
rpassword = "7"
# AC-83 / Slice G0a.1: SandboxInitPolicy IPC between the parent
# (pincery-server) and the in-sandbox `pincery-init` exec wrapper.
# Bincode is a small, deterministic, no-schema format well-suited
# to a single-producer single-consumer memfd payload that will never
# cross a version boundary (wrapper + server ship from the same
# git SHA). Pinned to the v1 line — v2 is a rewrite with a different
# API surface and is not needed here.
bincode = "1.3"
# AC-44 (v8): OpenAPI 3.1 spec generation via derive macros.
# `axum_extras` unlocks type-driven path-param extraction; `yaml` is
# used by the /openapi.yaml handler.
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "yaml"] }
# AC-47 (v8): universal `--output` flag. serde_yaml handles the
# `yaml` format; `jsonpath-rust` handles the kubectl-compatible
# `jsonpath='...'` subset. tabled drives the TTY-default `table`
# renderer with NO_COLOR honouring.
serde_yaml = "0.9"
jsonpath-rust = "0.7"
tabled = "0.15"

# AC-53 / Slice A2b.1: Linux-only sandbox crates.
#
# These crates provide the six-layer fail-closed sandbox (bwrap
# namespaces + cgroup v2 + landlock + seccomp-bpf + uid/cap drop +
# slirp4netns egress) described in scaffolding/design.md. They are
# Linux-only because the kernel surface they bind to (LSM landlock,
# seccomp-bpf, cgroup v2, user+pid+net namespaces) does not exist on
# Windows or macOS. Gating them behind `cfg(target_os = "linux")`
# keeps Windows/macOS `cargo build` green for contributors while
# production workloads run under a Linux devshell or container.
#
# Version pins are concrete (no wildcards) and enforced by
# `tests/sandbox_deps_test.rs`. Licenses (MIT / Apache-2.0) are
# already covered by `deny.toml`'s [licenses].allow list.
[target.'cfg(target_os = "linux")'.dependencies]
# AWS Firecracker's seccomp-bpf filter compiler. Used to build the
# default-deny syscall allowlist that wraps every agent tool invocation.
seccompiler = "0.5"
# Safe Rust bindings to the landlock LSM (kernel >= 5.13). Used to
# restrict filesystem reads/writes to the workspace scratch directory.
landlock = "0.4"
# cgroup v2 interface for CPU/memory/pids caps. Used to bound tool
# runtime resource consumption (AC-65 budget enforcement layer).
cgroups-rs = "0.3"
# Direct syscall bindings for unshare/clone/setns/mount. Used by the
# bwrap wrapper for namespace composition.
nix = { version = "0.29", features = ["sched", "mount", "user", "fs", "process"] }
# Raw libc bindings — we use `libc::memfd_create` + `libc::SYS_*`
# constants when serializing the seccomp BPF program into a memfd
# for bwrap's `--seccomp <fd>` flag (A2b.4b). Already a transitive
# dep via seccompiler/nix; pinning it explicitly documents the
# intentional direct use and keeps `tests/sandbox_deps_test.rs`
# happy.
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
walkdir = "2"

[[bin]]
name = "pcy"
path = "src/bin/pcy.rs"

# AC-20: Release profile — small, stripped, single codegen unit for reproducibility.
# Leaves panic = "unwind" (default) so a panic in one background task does not
# terminate the whole multi-agent service.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
